--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3",
-    "semantic-ui-react": "^0.85.0"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +24,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
